# cicd-web-app

./: .coveragerc  .dockerignore  .gitignore  README.md  docker-compose.yml  entrypoint.sh  entrypoint.test.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
accounts/: admin.py  auth.py  urls.py
accounts/api/: serializers.py  views.py
accounts/tests/: test_models.py
accounts/tests/api/: test_views.py
blog/: admin.py  models.py  tests.py  urls.py
blog/api/: parsers.py  serializers.py  tests.py  views.py
blog/tests/: test_models.py  test_views.py
blog/tests/api/: test_views.py
cicd_app/: asgi.py  settings.py  urls.py  wsgi.py
cicd_app/accounts/: models.py  urls.py
cicd_app/accounts/api/: views.py
cicd_app/accounts/tests/: test_models.py
cicd_app/accounts/tests/api/: test_views.py
cicd_app/base/: urls.py  views.py  wsgi.py
cicd_app/blog/: models.py
cicd_app/blog/tests/: test_models.py
cicd_app/blog/tests/api/: test_views.py
cicd_app/settings/: base.py  dev.py  local.py  production.py  test.py
docker/: Dockerfile.prod
docker/nginx/: nginx.conf
docker/web/: Dockerfile
frontend/: .env.development  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: BackButton.vue  BlogCard.vue  GoToTop.vue  LoginForm.vue  NavBar.vue  RefreshSession.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: About.vue  BlogContent.vue  BlogTop.vue  EditProfile.vue  Home.vue  Index.vue  Login.vue  Profile.vue  Settings.vue
sample_dotenv/: sample.env.db  sample.env.prod
