[tool.poetry]
name = "cicd_app"
version = "0.0.1"
description = ""
authors = ["Rio Matsuoka <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
django = "^3.0.4"
djangorestframework = "^3.11.0"
djangorestframework-simplejwt = "^4.4.0"
django-cors-headers = "^3.2.1"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.4"
pillow = "^7.0.0"
whitenoise = "^5.0.1"

[tool.poetry.dev-dependencies]
coverage = "^5.0.4"
django-debug-toolbar = "^2.2"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
