[tool.poetry]
name = "cicd_app"
version = "0.0.1"
description = ""
authors = ["Rio Matsuoka <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
django = "^3.0.7"
djangorestframework = "^3.11.0"
djangorestframework-simplejwt = "^4.4.0"
django-cors-headers = "^3.2.1"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.4"
pillow = "^7.0.0"
whitenoise = "^5.0.1"

[tool.poetry.dev-dependencies]
coverage = "^5.0.4"
django-debug-toolbar = "^2.2"
tox = "^3.14.5"
flake8 = "^3.8.3"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36, py37, py38

[testenv]
deps = -rrequirements.txt
commands = python3 manage.py test
"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

